tests/assets/platform_valid_async/validation-gatekeeper/constraints/all/required-annotations.yaml
###############################################################################
# Copyright 2024 Google, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
###############################################################################
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: all-resource-required-annotations
  namespace: gator-local
spec:
  match:
    excludedNamespaces: ["gator-local"]
  parameters:
    annotations:
    - key: client.lifecycle.config.k8s.io/deletion
      allowedRegex: ^detach$
    - key: configsync.gke.io/cluster-name-selector
    - key: cluster-group
    - key: managing-repo
